Latest version of gallery, not final version

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,7 +13,10 @@
 
  *= require_self
  */
- 
+ @import "main";
  @import "bootstrap-sprockets";
  @import "bootstrap";
- @import "main";
+ @import "lightbox";
+
+ 
+
