--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Workspace</title>
+  <title>GH Photo Galleries</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'main', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'bootstrap', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'lightbox', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-
 <header>
     <nav class="navbar navbar-inverse">
       <div class="container">
@@ -19,38 +20,60 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <a class="navbar-brand" href="http://www.glorytoglorychurch.org">Home</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><%= link_to "Glory House Events", root_path %></li>
-            <% @categoryNav.each do |category| %>
-              <li><%= link_to category.name, category_path(category.id) %></li>
-            <% end %>
+          <div class="dropdown">
+            <button class="btn btn-default dropdown" type="button" id="dropdownMenu1"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              <%= link_to "Glory House Picture Galleries", root_path %>
+              <span class="caret"></span>  
+            </button>
+          <ul class="nav navbar-nav dropdown-menu" aria-labelledby="dropdownMenu1">
+              <% @categoryNav.each do |category| %>
+                <li><%= link_to category.name, category_path(category.id) %></li>
+              <% end %>
           </ul>
+          </div>
           <ul class="nav navbar-nav pull-right">
              <li><%= link_to "Upload Photo", upload_path %></li>
              <li><%= link_to "Add Category", new_category_path %></li>
+             <li><% if user_signed_in? %>
+                  Logged in as <strong><%= current_user.email %></strong>.
+                  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+                  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+                <% else %>
+                  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+                  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+                <% end %></li>
           </ul>
         </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+      </div><!-- end container -->
+    </nav><!-- end page navigation bar -->
   </header>
-    
     <section>
             <div class="container">
               <!-- Alerts & Messages -->
-              <% if flash[:notice] %>
-                <div class="alert alert-success"><%= flash[:notice] %></div>
-              <% end %>
+                <% if flash[:notice] %>
+                  <div class="alert alert-success"><%= flash[:notice] %></div>
+                <% end %>
+                
+                <% if flash[:alert] %>
+                  <div class="alert alert-danger"><%= flash[:alert] %></div>
+                <% end %>
+                
+                <% if notice %>
+                  <p class="alert alert-success"><%= notice %></p>
+                <% end %>
+                <% if alert %>
+                  <p class="alert alert-danger"><%= alert %></p>
+                <% end %>
               
-              <% if flash[:alert] %>
-                <div class="alert alert-danger"><%= flash[:alert] %></div>
-              <% end %>
               <%= yield %>
             </div>
     </section>
   <footer>
-    <p>Copyright @copy; 2015 Glory House World Church</p>
+    <p>Copyright @2015 Glory House World Church</p>
   </footer>
 </body>
 </html>
